# Copyright 2023 Lei Zhang
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "langchain-plantuml"
version = "0.0.1"
description = "Generate PlantUML execution activity diagrams based on LangChain CallBacks"
requires-python = ">=3.8"
dependencies = [
    "langchain==0.0.228"
]

[tool.flit.module]
name = "langchain_plantuml"

[project.optional-dependencies]
lint = [
    "flake8==5.0.4",
    "pyproject-flake8==5.0.4",
    "isort>=5,<6",
    "black>=23,<24"
]
test = [
    "openai==0.27.8",
    "chromadb==0.3.26",
    "tiktoken==0.4.0",
    "coverage==7.2.7"
]
package = [
    "flit==3.9.0"
]

[tool.flake8]
max-line-length = 120
ignore = ['E231', 'E241', 'W291', 'W293']
per-file-ignores = [
    '__init__.py:F401',
]
count = true
