# Copyright 2023 Lei Zhang
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "langchain-plantuml"
version = "0.0.8"
description = "Subscribe to events using a callback and store them in PlantUML format. You can easily subscribe to events and keep them in a form that is easy to visualize and analyze."
authors = [{ name = "Lei Zhang", email = "zhanglei@apache.org" }]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "langchain>=0.0.310"
]

[tool.flit.module]
name = "langchain_plantuml"

[project.optional-dependencies]
lint = [
    "flake8==6.1.0",
    "pyproject-flake8==6.1.0",
    "isort>=5,<6",
    "black>=23,<24"
]
test = [
    "openai==0.28.1",
    "chromadb==0.4.13",
    "tiktoken==0.5.1",
    "coverage==7.3.2"
]
package = [
    "flit==3.9.0"
]

[tool.flake8]
max-line-length = 180
ignore = ['E231', 'E241', 'W291', 'W293', 'E203']
per-file-ignores = [
    '__init__.py:F401',
]
count = true

[project.urls]
Documentation = "https://pypi.org/project/langchain-plantuml"
Source = "https://github.com/coolbeevip/langchain_plantuml"
Tracker = "https://github.com/coolbeevip/langchain_plantuml/issues"
